--- a/Lab3/Lab3.ioc
+++ b/Lab3/Lab3.ioc
@@ -31,32 +31,34 @@ Mcu.Pin17=PE13
 Mcu.Pin18=PE14
 Mcu.Pin19=PE15
 Mcu.Pin2=PE4
-Mcu.Pin20=PD15
-Mcu.Pin21=PC6
-Mcu.Pin22=PC7
-Mcu.Pin23=PC8
-Mcu.Pin24=PC9
-Mcu.Pin25=PA8
-Mcu.Pin26=PA9
-Mcu.Pin27=PA10
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
+Mcu.Pin20=PD12
+Mcu.Pin21=PD13
+Mcu.Pin22=PD14
+Mcu.Pin23=PD15
+Mcu.Pin24=PC6
+Mcu.Pin25=PC7
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PE5
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PB3
-Mcu.Pin33=PB6
-Mcu.Pin34=PB7
-Mcu.Pin35=PE0
-Mcu.Pin36=PE1
-Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PB3
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
+Mcu.Pin37=PE0
+Mcu.Pin38=PE1
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PC14-OSC32_IN
 Mcu.Pin5=PC15-OSC32_OUT
 Mcu.Pin6=PF0-OSC_IN
 Mcu.Pin7=PF1-OSC_OUT
 Mcu.Pin8=PA0
 Mcu.Pin9=PA5
-Mcu.PinsNb=38
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -146,8 +148,6 @@ PC6.Locked=true
 PC6.Signal=GPIO_Output
 PC7.Locked=true
 PC7.Signal=GPIO_Output
-PC8.Locked=true
-PC8.Signal=GPIO_Output
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PCC.Checker=false
@@ -157,6 +157,12 @@ PCC.PartNumber=STM32F303VCTx
 PCC.Series=STM32F3
 PCC.Temperature=25
 PCC.Vdd=3.6
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD15.Locked=true
 PD15.Signal=GPIO_Output
 PE0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
